Second Commit For Angular app

--- a/src/app/user/components/ticket-history/ticket-history.component.html
+++ b/src/app/user/components/ticket-history/ticket-history.component.html
@@ -25,18 +25,9 @@
         <td>{{tickHis.email}}</td>
         <td>{{tickHis.fair}}</td>
         <td><button type="button" class="btn btn-outline-success">Download</button></td>
-        <td><button type="button" (click)="onCancel()" class="btn btn-outline-success">Cancil</button></td>
+        <td><button type="button" (click)="onCancel(tickHis)" class="btn btn-outline-success">Cancel</button></td>
       </tr>
     </tbody>
   </table>
 
-    <!-- <div ></div>
-        <td>{{tickHis.id}}</td>
-        <td>{{tickHis.airLine}}</td>
-        <td>{{tickHis.from}}</td>
-        <td>{{tickHis.statue}}</td>
-        <td>{{tickHis.destination}}</td>
-        <td>{{tickHis.pnr}}</td>
-        <td>{{tickHis.email}}</td>
-        <td>{{tickHis.fair}}</td> -->
         
